--- a/index.html
+++ b/index.html
@@ -5,51 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style type="text/css">
-      * {
-        margin: 0;
-        padding: 0;
-        list-style: 0;
-      }
-      .main {
-        width: 100%;
-        height: 100vh;
-        background: linear-gradient(105deg, transparent 50%, pink 50%) right
-            center / 100% 100%,
-          url(./photo/main.JPG) left 0 / 60% auto;
-      }
-      .container {
-        width: 100%;
-        height: 100%;
-        margin: auto;
-      }
-      .main-text {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-end;
-        margin-right: 12%;
-      }
-      .main-text h1 {
-        font-size: 80px;
-        border-bottom: 5px solid #ff4164;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
-        color: #ff4164;
-      }
-      .main-text p {
-        font-size: 50px;
-        color: #fff;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main">
-      <div class="container">
-        <div class="main-text">
-          <h1>黃芷渝一周年</h1>
-          <p>周年成長紀錄</p>
+    <div class="container">
+      <!-- Main Topic -->
+      <div class="section">
+        <div class="banner">
+          <div class="banner-text">
+            <h1>黃芷渝一周年</h1>
+            <p>周年成長紀錄</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Page 1 -->
+      <div class="section">
+        <div class="page1">
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page1-text">
+              <h3>芷渝活動1</h3>
+              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page1-text">
+              <h3>芷渝活動2</h3>
+              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page1-text">
+              <h3>芷渝活動3</h3>
+              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page1-text">
+              <h3>芷渝活動4</h3>
+              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Page 2 -->
+      <div class="section">
+        <div class="page2">
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page2-text">
+              <h3>爸爸</h3>
+              <p>爸爸爸爸爸爸爸爸爸爸</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page2-text">
+              <h3>芷渝</h3>
+              <p>芷渝芷渝芷渝芷渝芷渝</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="./photo/main.JPG" alt="photo" />
+            <div class="page2-text">
+              <h3>媽媽</h3>
+              <p>媽媽媽媽媽媽媽媽媽媽</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Month1 -->
+      <div class="section">
+        <div class="Month1">
+          <div class="contain">
+            <h1>2021年03月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month2 -->
+      <div class="section">
+        <div class="Month2">
+          <div class="contain">
+            <h1>2021年04月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month3 -->
+      <div class="section">
+        <div class="Month3">
+          <div class="contain">
+            <h1>2021年05月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month4 -->
+      <div class="section">
+        <div class="Month4">
+          <div class="contain">
+            <h1>2021年06月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month5 -->
+      <div class="section">
+        <div class="Month5">
+          <div class="contain">
+            <h1>2021年07月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month6 -->
+      <div class="section">
+        <div class="Month6">
+          <div class="contain">
+            <h1>2021年08月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month7 -->
+      <div class="section">
+        <div class="Month7">
+          <div class="contain">
+            <h1>2021年09月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month8 -->
+      <div class="section">
+        <div class="Month8">
+          <div class="contain">
+            <h1>2021年10月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month9 -->
+      <div class="section">
+        <div class="Month9">
+          <div class="contain">
+            <h1>2021年11月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month10 -->
+      <div class="section">
+        <div class="Month10">
+          <div class="contain">
+            <h1>2021年12月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month11 -->
+      <div class="section">
+        <div class="Month11">
+          <div class="contain">
+            <h1>2022年01月</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Month12 -->
+      <div class="section">
+        <div class="Month12">
+          <div class="contain">
+            <h1>2022年02月</h1>
+          </div>
         </div>
       </div>
     </div>
