--- a/index.html
+++ b/index.html
@@ -10,71 +10,65 @@
   <body>
     <div class="container">
       <!-- Main Topic -->
-      <div class="section">
-        <div class="banner">
-          <div class="banner-text">
-            <h1>黃芷渝一周年</h1>
-            <p>周年成長紀錄</p>
-          </div>
+      <div class="banner">
+        <div class="banner-text">
+          <h1>黃芷渝一周年</h1>
+          <p>周年成長紀錄</p>
         </div>
       </div>
 
       <!-- Page 1 -->
-      <div class="section">
-        <div class="page1">
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page1-text">
-              <h3>芷渝活動1</h3>
-              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
-            </div>
+      <div class="page1">
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page1-text">
+            <h3>芷渝活動1</h3>
+            <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
           </div>
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page1-text">
-              <h3>芷渝活動2</h3>
-              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
-            </div>
+        </div>
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page1-text">
+            <h3>芷渝活動2</h3>
+            <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
           </div>
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page1-text">
-              <h3>芷渝活動3</h3>
-              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
-            </div>
+        </div>
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page1-text">
+            <h3>芷渝活動3</h3>
+            <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
           </div>
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page1-text">
-              <h3>芷渝活動4</h3>
-              <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
-            </div>
+        </div>
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page1-text">
+            <h3>芷渝活動4</h3>
+            <p>芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝芷渝</p>
           </div>
         </div>
       </div>
       <!-- Page 2 -->
-      <div class="section">
-        <div class="page2">
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page2-text">
-              <h3>爸爸</h3>
-              <p>爸爸爸爸爸爸爸爸爸爸</p>
-            </div>
+      <div class="page2">
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page2-text">
+            <h3>爸爸</h3>
+            <p>爸爸爸爸爸爸爸爸爸爸</p>
           </div>
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page2-text">
-              <h3>芷渝</h3>
-              <p>芷渝芷渝芷渝芷渝芷渝</p>
-            </div>
+        </div>
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page2-text">
+            <h3>芷渝</h3>
+            <p>芷渝芷渝芷渝芷渝芷渝</p>
           </div>
-          <div class="item">
-            <img src="./photo/main.JPG" alt="photo" />
-            <div class="page2-text">
-              <h3>媽媽</h3>
-              <p>媽媽媽媽媽媽媽媽媽媽</p>
-            </div>
+        </div>
+        <div class="item">
+          <img src="./photo/main.JPG" alt="photo" />
+          <div class="page2-text">
+            <h3>媽媽</h3>
+            <p>媽媽媽媽媽媽媽媽媽媽</p>
           </div>
         </div>
       </div>
@@ -175,5 +169,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
